<resources>
    <string name="app_name">Essra_Hmida_Mesure_Glycemie</string>
    <string name="mesure_de_niveau_de_glycémie">Mesure de niveau de glycémie</string>
    <string name="text">mesure de niveau de glycémie</string>
    <string name="votre_age">Votre age:</string>
    <string name="jeune">Est-ce que vous jeûnez ?</string>
    <string name="jeûne">Est-ce que vous jeûnez ?</string>
    <string name="Non">Non</string>
    <string name="Oui">Oui\n</string>
    <string name="mot_de_passe">mot de passe\n</string>
    <string name="email">email\n</string>
</resources>
