<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/app_background"
android:orientation="vertical"
android:padding="20dp"
tools:context=".view.MainActivity">

<TextView
    android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:fontFamily="@font/playfair_display"
    android:gravity="center"
    android:padding="30dp"
    android:text="@string/text"
    android:textColor="#141415"
    android:textSize="25sp"
    android:textStyle="bold" />

<TextView
    android:id="@+id/tvAge"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:text="@string/votre_age"
    android:textColor="@color/black"
    android:textSize="25sp" />

<SeekBar
    android:id="@+id/sbAge"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:max="120" />

<View
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:layout_marginTop="40dp"
    android:background="@drawable/line_shape" />
<TextView
    android:id="@+id/qst"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:text="@string/jeûne"
    android:textColor="@color/black"
    android:textSize="25sp" />
<RadioGroup
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="horizontal">
    <RadioButton
        android:id="@+id/rbtOui"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:checked="true"
        android:text="@string/Oui"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <RadioButton
        android:id="@+id/rbtNon"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:text="@string/Non"
        android:textColor="@color/black"
        android:textSize="20sp" />

</RadioGroup>

<EditText
    android:id="@+id/etValeur"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:hint="Valeur mesurée (en mmol/l)"
    android:inputType="numberDecimal"
    android:textColor="@color/black"
    android:textSize="25sp" />

<Button
    android:id="@+id/btnConsulter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:background="@drawable/custom_button_shape"
    android:onClick="calculer"
    android:text="Consulter"
    android:textColor="#0A0A0B"
    android:textSize="18sp" />

<TextView
    android:id="@+id/tvReponse"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:gravity="center"
    android:lineSpacingExtra="8sp"
    android:padding="40dp"
    android:text="..."
    android:textColor="@color/black"
    android:textSize="25sp"
    android:textStyle="bold" />
</LinearLayout>